add test for create one thread

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -3,3 +3,7 @@ AM_CFLAGS = -I/usr/include/python2.6/
 tst_load_python_LDADD = $(LIBCOMMON) -lpython2.6 -L/usr/lib/python2.6/
 tst_load_python_SOURCES = test/tst_load_python.c
 noinst_PROGRAMS = tst_load_python
+
+tst_create_thread_LDADD = $(LIBCOMMON) -lpthread
+tst_create_thread_SOURCES = test/tst_create_thread.c
+noinst_PROGRAMS = tst_create_thread
